[project]
name = "agentflow-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-shadcn>=0.9.7",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
]
